--- a/index.html
+++ b/index.html
@@ -43,19 +43,51 @@
 			<div class="portfolio-title">
 				<h1>Portfolio</h1>
 				<h2>showcase</h2>
-			</div><!-- close portfolio title-->	
+			</div>
+		</section><!-- close container-->
+			<!--
 			<section class="portfolio-showcase">
 				<div class="portfolio-piece">
 					<img src="images/lego-scene.png">
-				</div><!-- close portfolio piece-->
+				</div>
 				<div class="portfolio-piece">
-				<img src="images/visual-marque.png">
-				</div><!-- close portfolio piece-->
+				<img src="images/raindrop-droptop.png">
+				</div>
 				<div class="portfolio-piece">
 				<img src="images/suits-poster.png">
-				</div><!-- close portfolio piece-->
-			</section><!-- close portfolio showcase-->
-		</section><!-- close container-->	
+				</div>
+				<div class="portfolio-piece">
+				<img src="images/typeface.png">
+				</div>
+				<div class="portfolio-piece">
+				<img src="images/away-days.png">
+				</div>
+			</section><!-->
+		<section class="portfolio-showcase">
+			<section class="portfolio-pic">
+				<img src="images/typeface-showcase.png">
+			</section>	
+			<section class="portfolio-info">
+				<h1>Typeface</h1>
+				<p>The first typeface I created, using adobe illustrator.</p>
+				<img src="images/case-study-button.jpg">
+			</section>
+		</section>	
+
+
+		<section class="portfolio-showcase">
+			<section class="portfolio-info-2">
+				<h1>Typeface</h1>
+				<p>The first typeface I created, using adobe illustrator.</p>
+				<img src="images/case-study-button.jpg">
+			</section>
+			<section class="portfolio-pic-2">
+				<img src="images/typeface-showcase.png">
+			</section>	
+		</section>	
+
+
+	
 	</section><!--close portfolio tag-->
 
 			<section class="skills">
