--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 			</section>	
 			<section class="portfolio-info">
 				<h1>Typeface</h1>
-				<p>The first typeface I created, using adobe illustrator.</p>
+				<p>The first typeface I created using adobe illustrator.</p>
 				<img src="images/case-study-button.jpg">
 			</section>
 		</section>	
@@ -77,16 +77,26 @@
 
 		<section class="portfolio-showcase">
 			<section class="portfolio-info-2">
-				<h1>Typeface</h1>
-				<p>The first typeface I created, using adobe illustrator.</p>
+				<h1>Away Days</h1>
+				<p>A travel app, designed for football fans.</p>
 				<img src="images/case-study-button.jpg">
 			</section>
 			<section class="portfolio-pic-2">
-				<img src="images/typeface-showcase.png">
+				<img src="images/away-days-showcase.png">
 			</section>	
 		</section>	
 
 
+		<section class="portfolio-showcase">
+			<section class="portfolio-pic">
+				<img src="images/suits-showcase.png">
+			</section>	
+			<section class="portfolio-info">
+				<h1>Suits Poster</h1>
+				<p>A minimal suits poster I created using adobe illustrator</p>
+				<img src="images/case-study-button.jpg">
+			</section>
+		</section>	
 	
 	</section><!--close portfolio tag-->
 
