--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
     		
     		<div class="box">
 	    		<ul>
-	    			<li><a href="#title"><i class="smoothscroll"></i> home</a></li>
-	    			<li><a href="#about"><i class="smoothscroll"></i> about</a></li>
-	    			<li><a href="#portfolio"><i class="smoothscroll"></i> works</a></li>
-	    			<li><a href="#skills"><i class="smoothscroll"></i> contacts</a></li>
+	    			<li><a href="#title"><i class="smoothscroll"></i>home</a></li>
+	    			<li><a href="#about"><i class="smoothscroll"></i>about</a></li>
+	    			<li><a href="#portfolio"><i class="smoothscroll"></i>Portfolio</a></li>
+	    			<li><a href="#skills"><i class="smoothscroll"></i>skills</a></li>
 	    		</ul>
     		</div>
     		
@@ -186,7 +186,12 @@
 	</section><!--close skills tag-->
 
 	<footer>
-		kug
+		<section class="social-icons">
+			<h1>Contact me</h1>
+				 <a href="https://github.com/Jordyquench?tab=repositories"><img src="images/github.png" alt="Follow me on GitHub" /></a>
+				 <a href="mailto:"><img src="images/email.png" alt="Send me an email" /></a></li>
+				 <a href="https://www.instagram.com/jordangault_/?hl=en"><img src="images/instagram.png" alt="Follow me on Instagram" /></a>	 
+		</section>	 
 	</footer>
 </body>
 
