changed things abut

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 					<li> <a class="smoothScroll" href="#skills"> Skills </a> </li>
 				</ul>
 			</nav>	
+			<h1>Jordan Gault</h1>
+			<h2>Web and UI designer</h2>
 	</section>
 
 	
