--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
 			</div><!-- close about title-->	
 			<section class="about">
 				<p>Hi there, my names Jordan Gault and i'm currently studying Interaction design at Ulster University in Belfast.
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mollis, leo eget imperdiet tristique, sapien lacus vehicula tortor, ut consequat tellus metus vel urna. Curabitur molestie libero eget dolor commodo ullamcorper. Proin rutrum porttitor vulputate. Phasellus luctus velit a felis dictum, a hendrerit velit sodales. Etiam eget erat ex. Fusce et volutpat arcu. Vivamus eget magna et lectus porttitor faucibus at sed orci. Nunc aliquet nisl ac diam ultrices aliquam. In semper lacus purus, quis vehicula felis dignissim et. Mauris congue nunc vel diam lacinia, vitae malesuada lorem convallis. Aenean non consectetur risus.</p>
+				It hasn't been that long since I was introduced to this type of design, just a few years ago I had no idea what I wanted
+				to do career wise.</p>
+
+				<p>When I was in school I was thinking of going down a career path</p>
 
 				<p>Sed nisi sapien, porta vitae pulvinar id, sagittis ut magna. Nunc convallis id arcu nec lobortis. Integer nulla nisl, interdum in massa eget, vestibulum pulvinar velit. Praesent sed pellentesque arcu. Duis pellentesque faucibus orci, a accumsan nulla molestie id. Vestibulum tempus leo nec erat lobortis, ut volutpat elit consequat. Maecenas euismod laoreet ligula, ac molestie dolor pellentesque in. Sed pulvinar ante eget arcu rhoncus, sit amet dapibus tortor malesuada. Aenean placerat, augue suscipit interdum faucibus, felis eros suscipit dolor, auctor placerat lectus ligula eu justo. Proin eu consectetur lorem. Duis sit amet dictum enim, nec consectetur quam. Donec porta semper tincidunt.</p>
 
