--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 				It hasn't been that long since I was introduced to this type of design, just a few years ago I had no idea what I wanted
 				to do career wise.</p>
 
-				<p>When I was in school I was thinking of going down a career path</p>
+				<p>When I was in school I was thinking of going down a ICT based career path, which wasn't something I was exited about or anything, it was just the only thing I could think of. But once I left school I went to Northern Regional College and instead of doing the ICT course that I was thinking of doing I picked Interactive media, which was all about design. </p>
 
-				<p>Sed nisi sapien, porta vitae pulvinar id, sagittis ut magna. Nunc convallis id arcu nec lobortis. Integer nulla nisl, interdum in massa eget, vestibulum pulvinar velit. Praesent sed pellentesque arcu. Duis pellentesque faucibus orci, a accumsan nulla molestie id. Vestibulum tempus leo nec erat lobortis, ut volutpat elit consequat. Maecenas euismod laoreet ligula, ac molestie dolor pellentesque in. Sed pulvinar ante eget arcu rhoncus, sit amet dapibus tortor malesuada. Aenean placerat, augue suscipit interdum faucibus, felis eros suscipit dolor, auctor placerat lectus ligula eu justo. Proin eu consectetur lorem. Duis sit amet dictum enim, nec consectetur quam. Donec porta semper tincidunt.</p>
+				<p>This course was eye opening for me, it showed me that you can actually make a career out of designing things, rather than sitting behind a computer all day typing out mind numbing code.</p>
 
 				<p>Sed pharetra augue mollis, ultrices libero in, egestas magna. Sed interdum enim et lobortis vestibulum. Vivamus at dictum sapien. Etiam in porttitor risus. Mauris eget tristique ex, et commodo quam. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin tempor, neque sed placerat varius, ante eros feugiat nisl, interdum ornare sem nisl sit amet nulla. Nulla tincidunt consectetur ligula id mattis. Duis interdum, turpis sit amet volutpat vestibulum, elit tellus vulputate turpis, in blandit nunc odio a odio. Aenean ultricies magna eu nunc semper, eu malesuada ligula congue. Quisque lobortis urna sed augue pulvinar malesuada.
 				</p>
@@ -61,24 +61,6 @@
 				<img src="images/visual-marque-small.png">
 			</div><!-- close portfolio title-->
 
-			<!--
-			<section class="portfolio-showcase">
-				<div class="portfolio-piece">
-					<img src="images/lego-scene.png">
-				</div>
-				<div class="portfolio-piece">
-				<img src="images/raindrop-droptop.png">
-				</div>
-				<div class="portfolio-piece">
-				<img src="images/suits-poster.png">
-				</div>
-				<div class="portfolio-piece">
-				<img src="images/typeface.png">
-				</div>
-				<div class="portfolio-piece">
-				<img src="images/away-days.png">
-				</div>
-			</section><!-->
 		<section class="portfolio-showcase">
 			<section class="portfolio-pic">
 				<img src="images/typeface-showcase.png">
