--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 			</nav>	
 			<h1>Jordan Gault</h1>
 			<h2>Web and UI designer</h2>
+			<section class="monogram">
+
+			</section>
 	</section>
 
 	
@@ -45,7 +48,7 @@
 
 				<p>This course was eye opening for me, it showed me that you can actually make a career out of designing things, rather than sitting behind a computer all day typing out mind numbing code.</p>
 
-				<p>Sed pharetra augue mollis, ultrices libero in, egestas magna. Sed interdum enim et lobortis vestibulum. Vivamus at dictum sapien. Etiam in porttitor risus. Mauris eget tristique ex, et commodo quam. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin tempor, neque sed placerat varius, ante eros feugiat nisl, interdum ornare sem nisl sit amet nulla. Nulla tincidunt consectetur ligula id mattis. Duis interdum, turpis sit amet volutpat vestibulum, elit tellus vulputate turpis, in blandit nunc odio a odio. Aenean ultricies magna eu nunc semper, eu malesuada ligula congue. Quisque lobortis urna sed augue pulvinar malesuada.
+				<p>Now I'm studying Interaction design at Ulster University in Belfast and I am Constantly expanding my deisgn knowledge.
 				</p>
 			</section><!-- close about tag-->
 
@@ -63,7 +66,6 @@
 
 		<section class="portfolio-showcase">
 			<section class="portfolio-pic">
-				<img src="images/typeface-showcase.png">
 			</section><!-- close portfolio pic -->	
 			<section class="portfolio-info">
 				<h1>Typeface</h1>
@@ -80,14 +82,12 @@
 				<img src="images/case-study-button.jpg">
 			</section><!-- close portfolio info 2 -->
 			<section class="portfolio-pic-2">
-				<img src="images/away-days-showcase.png">
 			</section>	<!-- close portfolio pic 2 -->
 		</section>	<!-- close portfolio showcase -->
 
 
 		<section class="portfolio-showcase">
-			<section class="portfolio-pic">
-				<img src="images/suits-showcase.png">
+			<section class="portfolio-pic-3">
 			</section>	<!-- close portfolio pic-->
 			<section class="portfolio-info">
 				<h1>Suits Poster</h1>
