--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
 		<section class="portfolio-showcase">
 			<section class="portfolio-pic">
 			</section><!-- close portfolio pic -->	
-			<section class="portfolio-info">
-				<h1>Typeface</h1>
-				<p>The first typeface I created using adobe illustrator.</p>
+				<section class="portfolio-info">
+					<h1>Suits Poster</h1>
+					<p>A minimal suits poster I created using adobe illustrator</p>
 				<img src="images/case-study-button.jpg">
-			</section><!-- close portfolio info -->
+			</section><!-- close portfolio info-->
 		</section>	<!-- close portfolio showcase -->
 
 
