got cases studies complete

--- a/away-days.html
+++ b/away-days.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Typeface</title>
+	<title>Away Days</title>
 	<link rel="stylesheet" type="text/css" href="css/t-style.css">
 	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Roboto" rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -23,8 +23,8 @@
 					<li> <a class="smoothScroll" href="#final"> Finished </a> </li>
 				</ul>
 			</nav>	
-			<h1>Typeface</h1>
-			<h2>My first attempt</h2>
+			<h1>Away Days</h1>
+			<h2>App design</h2>
 
 			</section>
 	</section>
@@ -34,19 +34,20 @@
 		<section class="brief-container">
 			<div class="brief-title">
 				<h1>The Brief</h1>
-				<h2>Typeface</h2>
+				<h2>Away days</h2>
 				<img src="images/visual-marque-small.png">
 			</div><!-- close about title-->	
 			<section class="brief">
-				<p>This was one of the first assignments that I got in my first semester at uni, it was to create a typeface. The typeface didnt necessarily have to a font that people ould write with, it could be anything aslong as it was legible</p>
+				<p>The brief was very simple for this assignment, it was to use illustrations and icons that we had previously created to make a travel app with at least three screens. A home screen (with a name for the app), a pick a city screen and a screen with details about the city.</p>
 
-				<p>The idea behind my design started with me wanting to create a simple and obscure typeface, not something you would naturally see someone writing an essay with. Something more out there that you would see on a poster or maybe CD art.
+				<p>Page 1 - The first page is a splash screen, gives the user an opportunity to sign into the app. It also has the app icon. It took me a while to come up with an icon and a name for the app. The name I came up with is “away days” this came from the idea that the app is a travel app for football fans wanting to travel to different countries to watch football matches, most likely away matches.</p>
 
-I tried to use just lines, triangles and circles, And each line at an angle is (with maybe a few exceptions)  is at a 45° angle. The reason behind all of this is because i wanted to keep the font consistent. Everything looks better when its kept consistent.</p>
+				<p>Page 2 - I have 3 versions of page 2 here, this page is the “pick a city screen” keeping with the simple flat design that I used for the icons in the screens. I tried not to put too much on each of these screens, the motto of each team at the cotton left just fills out the bottom of the page enough without making it too packed in my opinion.</p>
 
-				<p>I’m happy with the way the typeface turned out, some of the letters took longer to do like the N, took a while (and some second opinions) to get it right.
+				<p>Page 4 - This screen is the landmark page. It has a cityscape at the top, in the page I designed there is a Madrid cityscape. after that part, it has a list of different attractions and tours you can do while in that city. once you click on the plus it brings up a more detailed section about that particular landmark.</p>
 
-I would like to try and do the lower case alphabet in the same style sometime as well.</p>
+				<p></p>
+
 
 			</section><!-- close about tag-->
 
@@ -64,22 +65,23 @@ I would like to try and do the lower case alphabet in the same style sometime as
 
 		<section class="sketches-showcase">
 			<section class="sketches-pic">
-				<img src="images/typeface-screenshot-1.jpg">
+				<img src="images/away-days-2.jpg">
 			</section><!-- close sketches pic -->	
 			<section class="portfolio-pic-2">
-				<img src="images/typeface-screenshot-2.jpg">
+				<img src="images/away-days-6.jpg">
 			</section><!-- close sketches pic -->	
 		</section>	<!-- close sketches showcase -->
 
-				<section class="sketches-showcase">
+		<section class="sketches-showcase">
 			<section class="sketches-pic">
-				<img src="images/typeface-screenshot-3.jpg">
+				<img src="images/away-days-3.jpg">
 			</section><!-- close sketches pic -->	
 			<section class="sketches-pic-2">
-				<img src="images/typeface-screenshot-4.jpg">
+				<img src="images/away-days-4.jpg">
 			</section><!-- close sketches pic -->	
 		</section>	<!-- close sketches showcase -->		
 		</section><!-- close container -->
+
 
 		<section id="final">
 			<section class="container">
@@ -90,7 +92,7 @@ I would like to try and do the lower case alphabet in the same style sometime as
 				</div><!-- close final title-->
 
 		<section class="final-showcase">		
-				<img src="images/final-typeface.png">
+				<img src="images/away-days-final.png">
 			</section><!-- close container -->
 		</section><!-- close final showcase-->	
 
