--- a/index.html
+++ b/index.html
@@ -68,9 +68,11 @@
 			<section class="portfolio-pic">
 			</section><!-- close portfolio pic -->	
 				<section class="portfolio-info">
-					<h1>Suits Poster</h1>
-					<p>A minimal suits poster I created using adobe illustrator</p>
-				<img src="images/case-study-button.jpg">
+					<h1>Typeface</h1>
+					<p>My first attempt at designing my own typeface</p>
+				<a href="typeface.html">
+  					<img src="images/case-study-button.jpg">
+				</a>
 			</section><!-- close portfolio info-->
 		</section>	<!-- close portfolio showcase -->
 
@@ -79,7 +81,9 @@
 			<section class="portfolio-info-2">
 				<h1>Away Days</h1>
 				<p>A travel app, designed for football fans.</p>
-				<img src="images/case-study-button.jpg">
+				<a href="away-days.html">
+  					<img src="images/case-study-button.jpg">
+				</a>
 			</section><!-- close portfolio info 2 -->
 			<section class="portfolio-pic-2">
 			</section>	<!-- close portfolio pic 2 -->
@@ -92,7 +96,9 @@
 			<section class="portfolio-info">
 				<h1>Suits Poster</h1>
 				<p>A minimal suits poster I created using adobe illustrator</p>
-				<img src="images/case-study-button.jpg">
+				<a href="suits.html">
+  					<img src="images/case-study-button.jpg">
+				</a>
 			</section><!-- close portfolio info-->
 		</section>	<!-- close portfolio showcase-->
 		</section><!-- close container-->
