--- a/suits.html
+++ b/suits.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Typeface</title>
-	<link rel="stylesheet" type="text/css" href="css/t-style.css">
+	<title>Suits</title>
+	<link rel="stylesheet" type="text/css" href="css/s-style.css">
 	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Roboto" rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script type="text/javascript" src="js/lightbox.min.js"></script>
@@ -23,8 +23,8 @@
 					<li> <a class="smoothScroll" href="#final"> Finished </a> </li>
 				</ul>
 			</nav>	
-			<h1>Typeface</h1>
-			<h2>My first attempt</h2>
+			<h1>Suits Poster</h1>
+			<h2>Minimalist deisgn</h2>
 
 			</section>
 	</section>
@@ -38,15 +38,14 @@
 				<img src="images/visual-marque-small.png">
 			</div><!-- close about title-->	
 			<section class="brief">
-				<p>This was one of the first assignments that I got in my first semester at uni, it was to create a typeface. The typeface didnt necessarily have to a font that people ould write with, it could be anything aslong as it was legible</p>
+				<p>The brief for this project was very simple, just make a minimalistic style poster based around a movie or tv show that you are intrested in.</p>
 
-				<p>The idea behind my design started with me wanting to create a simple and obscure typeface, not something you would naturally see someone writing an essay with. Something more out there that you would see on a poster or maybe CD art.
+				<p>The main focal point I went for was the 2 ties and collars in the middle of the page, I thought this worked really well because the show is called suits and about lawyers. The different sizes in ties is because the 2 main characters wear similar style ties to the ones depicted.</p>
 
-I tried to use just lines, triangles and circles, And each line at an angle is (with maybe a few exceptions)  is at a 45° angle. The reason behind all of this is because i wanted to keep the font consistent. Everything looks better when its kept consistent.</p>
+				<p>I went with the New York skyline on the top of the page because the show takes places  in New York, but not only this, I felt like going with the silhouette kept with the minimal design and worked really well overall. </p>
 
-				<p>I’m happy with the way the typeface turned out, some of the letters took longer to do like the N, took a while (and some second opinions) to get it right.
-
-I would like to try and do the lower case alphabet in the same style sometime as well.</p>
+				<p>I tried to keep the text at the bottom of the page as similar to the original as I could. Instead of the regular tagline “Nothing is ever black and white” I replaced it with “You just got Litt up” This is a line said in the show which anyone who watches the show will recognise. 
+				</p>
 
 			</section><!-- close about tag-->
 
@@ -62,21 +61,13 @@ I would like to try and do the lower case alphabet in the same style sometime as
 					<img src="images/visual-marque-small.png">
 				</div><!-- close sketches title-->
 
-		<section class="sketches-showcase">
-			<section class="sketches-pic">
-				<img src="images/typeface-screenshot-1.jpg">
-			</section><!-- close sketches pic -->	
-			<section class="portfolio-pic-2">
-				<img src="images/typeface-screenshot-2.jpg">
-			</section><!-- close sketches pic -->	
-		</section>	<!-- close sketches showcase -->
 
 				<section class="sketches-showcase">
 			<section class="sketches-pic">
-				<img src="images/typeface-screenshot-3.jpg">
+				<img src="images/suits-1.jpg">
 			</section><!-- close sketches pic -->	
 			<section class="sketches-pic-2">
-				<img src="images/typeface-screenshot-4.jpg">
+				<img src="images/suits-2.jpg">
 			</section><!-- close sketches pic -->	
 		</section>	<!-- close sketches showcase -->		
 		</section><!-- close container -->
@@ -90,7 +81,7 @@ I would like to try and do the lower case alphabet in the same style sometime as
 				</div><!-- close final title-->
 
 		<section class="final-showcase">		
-				<img src="images/final-typeface.png">
+				<img src="images/suits-final.png">
 			</section><!-- close container -->
 		</section><!-- close final showcase-->	
 
